--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://test1-iac.pingan.com:10336/iac_core/iac-mobile/do/version/queryIosUrl</string>
+					<string>https://raw.githubusercontent.com/k8dasd/testplist/master/InsuranceHome.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
