--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://test1-iac.pingan.com:10336/iac_core/iac-mobile/do/version/queryIosUrl</string>
+					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/E298DB346C4B47DEBA0C1612871D9ECA?attname=</string>
 				</dict>
 				<dict>
 					<key>kind</key>
