--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/E298DB346C4B47DEBA0C1612871D9ECA?attname=</string>
+					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/08A6F7674C024777AA0772CFCC1F6BE8</string>
 				</dict>
 				<dict>
 					<key>kind</key>
