--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/A1D3BCD59DD54286B660E15D805C961E</string>
+					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/E93B06F652A14F1484A39E3EB3AABCB7</string>
 				</dict>
 				<dict>
 					<key>kind</key>
