--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/31E3AA7EC89E4FF7A594C7103D965F04</string>
+					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/ACC1D92868484224AD7ED65636AD1FBE</string>
 				</dict>
 				<dict>
 					<key>kind</key>
