--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/BD655BA556DB4E899E6C13316E367555</string>
+					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/26E2D0BBE1274B69B0645CA3139581C8</string>
 				</dict>
 				<dict>
 					<key>kind</key>
