--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/26E2D0BBE1274B69B0645CA3139581C8</string>
+					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/303AA076169B42919C99F85F391DA064</string>
 				</dict>
 				<dict>
 					<key>kind</key>
