--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/0C4D6AA3536D4AB7AB6BA37A840A45E6</string>
+					<string>啦啦啦啦	http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/EFE79AEFA11A428F84AA32C2474BF396</string>
 				</dict>
 				<dict>
 					<key>kind</key>
