--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/328B4F90154146FFB0791F63E51D10E0</string>
+					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/21C4B24C5B3E4FF3BC47511748ED379D</string>
 				</dict>
 				<dict>
 					<key>kind</key>
