--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/5E18A44096084A53B53DDDAA60B305EA</string>
+					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/917A7BDA4BD34EC9BD4B8D73DDD7490C</string>
 				</dict>
 				<dict>
 					<key>kind</key>
