--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/3C1E0E2A28244A6780973C55C60CD30D</string>
+					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/562E96BDC13C4F87A70ED0C092CF83E6</string>
 				</dict>
 				<dict>
 					<key>kind</key>
