--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/908AB189F34B4565831661FD85DE9B4F</string>
+					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/AAC6CF497BA3482B9CFF42046F63E970</string>
 				</dict>
 				<dict>
 					<key>kind</key>
