--- a/production/manifest.plist
+++ b/production/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/6C45B67675FE4FA087BC434B5A5FBAA1?attname=</string>
+					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/EBCFF28EF2534EEAB2385F8452CD268E</string>
 				</dict>
 				<dict>
 					<key>kind</key>
