--- a/production/manifest.plist
+++ b/production/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/EBCFF28EF2534EEAB2385F8452CD268E</string>
+					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/83B80492514A4D0A8ECB78E17653AA1E</string>
 				</dict>
 				<dict>
 					<key>kind</key>
