--- a/development/manifest.plist
+++ b/development/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://plus.iobs.pingan.com.cn/download/iac-core-dmz-prd/83B80492514A4D0A8ECB78E17653AA1E</string>
+					<string>http://stg.iobs.pingan.com.cn/download/iac-core-dmz-stg/FACE32D438DB4C22AF7BFC064A193FE9</string>
 				</dict>
 				<dict>
 					<key>kind</key>
